2010-01-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c (parse_diskline): Don't set todo to 0 for
	                                          skip disk.
	* server-src/diskfile.c (disable_skip_disk): New function to set todo
	                                             to 0 for skip disk.
	* server-src/diskfile.h (disable_skip_disk): Add prototype.
	* server-src/amcheck.c, server-src/driver.c, server-src/planner.c
	  server-src/reporter.c: Call disable_skip_disk.

2010-01-14  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Makefile.am: typo.

2010-01-14  Paul C. Mantz <pcmantz@zmanda.com>
	* server-src/amreport_new.pl: amreport rewrite in perl
	* perl/Amanda/Report.pm perl/Amanda/Report/human.pm
          perl/Amanda/Report/xml.pm: factored out output formats and
	  added legacy format
	* perl/Makefile.am server-src/Makefile.am: makefile changes
	* contrib/amreport.rnc: amreport xml spec in RelaxNG

2010-01-13  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/device.c perl/Amanda/Device.pod perl/Amanda/Device.swg:
	  make device_listen and device_accept callable anywhere; be explicit
	  about conn refcount from accept
	* device-src/ndmp-device.c: don't call device_use_connection, as
	  that method requires ACCESS_NULL
	* restore-src/restore.c: fix typo

2010-01-13  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/taper.pl: fix taper writing status too quickly

2010-01-13  Dustin J. Mitchell <dustin@zmanda.com>
	* client-src/client_util.c: fix to send the --direct-tcp and
	  --data-path arguments to applications
	* client-src/sendbackup.c: add a bit of debugging to sendbackup

2010-01-13  Dustin J. Mitchell <dustin@zmanda.com>
	* restore-src/restore.c: add missing htonl to restore.c for ipv4
	  address; fix typo

2010-01-13  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/ndmpconnobj.c ndmp-src/ndmpconnobj.h: better debugging
	  messages, including a fancy connection ID to help debug problems